<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.group26</groupId>
  <artifactId>ci-server-g26</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>ci-server-g26</name>
  <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

  <dependencies>
      <!-- https://mvnrepository.com/artifact/org.json/json -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>LATEST</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.6</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    
  	<dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.1.0</version>
  	</dependency>

  	<dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-server</artifactId>
      <version>7.0.2.v20100331</version>
	  </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
	  <groupId>org.eclipse.jetty</groupId>
	  <artifactId>jetty-server</artifactId>
	  <version>7.0.2.v20100331</version>
	</dependency>

      <dependency>
          <groupId>org.apache.maven.shared</groupId>
          <artifactId>maven-verifier</artifactId>
          <version>2.0.0-M1</version>
      </dependency>

      <dependency>
          <groupId>org.apache.maven</groupId>
          <artifactId>maven-embedder</artifactId>
          <version>3.8.4</version>
          <scope>test</scope>
      </dependency>
      <!-- START transitive dependencies of embedder -->
      <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-simple</artifactId>
          <version>1.7.32</version>
          <scope>test</scope>
      </dependency>
      <!-- required due to https://issues.apache.org/jira/browse/MNG-6561 -->
      <dependency>
          <groupId>org.apache.maven</groupId>
          <artifactId>maven-compat</artifactId>
          <version>3.8.4</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.apache.maven.resolver</groupId>
          <artifactId>maven-resolver-connector-basic</artifactId>
          <version>1.6.3</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.apache.maven.resolver</groupId>
          <artifactId>maven-resolver-transport-http</artifactId>
          <version>1.6.3</version>
          <scope>test</scope>
      </dependency>
    
    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
	<dependency>
	    <groupId>org.apache.httpcomponents</groupId>
	    <artifactId>httpclient</artifactId>
	    <version>4.5.14</version>
	</dependency>
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.4.1</version>
        <configuration>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
</project>
